name: blob
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Data
author: Anshu Avinash

library
    build-depends:
        base >=4.7 && <4.8,
        bytestring >=0.10 && <0.11,
        directory >=1.2 && <1.3,
        uuid >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        cryptohash >=0.11 && <0.12,
        base16-bytestring >=0.1 && <0.2
    exposed-modules:
        Data.Blob
        Data.Blob.GC
    other-modules:
        Data.Blob.Types
        Data.Blob.FileOperations
    default-language: Haskell2010
    hs-source-dirs: src
