name: bloc
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
homepage: https://github.com/typedb/bloc
synopsis: Binary Large Objects with Concurrency
description:
    The name bloc stands for Binary Large Objects with Concurrency and is inspired
    from blob (Binary Large OBject).
    .
    As evident from the name, bloc provides a concurrent interface for handling
    blobs. We provide methods for incremental writes, incremental reads and
    garbage collection of the deleted blobs.
    .
    This package is not supported under Windows.
category: Data
author: Anshu Avinash

source-repository head
    type: git
    location: https://github.com/typedb/bloc.git

library
    build-depends:
        base >=4.5 && <5,
        bytestring >=0.10 && <0.11,
        directory >=1.2 && <1.3,
        uuid >=1.3 && <1.4,
        filepath >=1.3 && <1.5,
        cryptohash >=0.11 && <0.12,
        base16-bytestring >=0.1 && <0.2,
        unix >=2.7 && <2.8
    exposed-modules:
        Data.Blob
        Data.Blob.GC
    other-modules:
        Data.Blob.Types
        Data.Blob.FileOperations
        Data.Blob.Directories
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-bloc
    build-depends:
        bloc >=0.1 && <0.2,
        base >=4.5 && <5,
        bytestring >=0.10 && <0.11,
        directory >=1.2 && <1.3,
        uuid >=1.3 && <1.4,
        filepath >=1.3 && <1.5,
        cryptohash >=0.11 && <0.12,
        base16-bytestring >=0.1 && <0.2,
        unix >=2.7 && <2.8,
        QuickCheck >=2.7 && <2.9,
        hspec >=2.1 && <2.2
    type: exitcode-stdio-1.0
    main-is: test/test-bloc.hs
    default-language: Haskell2010
